[project]
requires-python = 3.11

[tool.poetry]
name = 'maps'
version = '1.0.0'
description = 'map creations experiments'
authors  = [
    'Dmitry M <roxt.underground@gmail.com>'
]

[tool.poetry.dependencies]
python = "~=3.11"
poetry = {version=">=1.8.1", python='3.11'}
flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.1.1"

[tool.poetry.scripts]
main = "main.__main__:main"
